syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
    option (google.api.http) = {
      get: "/hello/{name}"
    };
  };

  rpc SayHello1 (HelloRequest) returns (HelloReply){
    option (google.api.http) = {
      get: "/hello/{name}"
    };
  };

  rpc BidiHello(stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
